rust_core/ffi/memory_ffi.rs

/// FFI bindings for memory management C hotspots
/// Provides high-performance memory operations and custom allocators

#[repr(C)]
pub struct MediaAllocator {
    _private: [u8; 0], // Opaque type
}

#[repr(C)]
pub struct MemoryPool {
    _private: [u8; 0], // Opaque type
}

#[repr(C)]
pub struct ZeroCopyBuffer {
    _private: [u8; 0], // Opaque type
}

#[repr(C)]
#[derive(Debug, Clone, Copy)]
pub struct MemoryStats {
    pub total_allocations: usize,
    pub total_deallocations: usize,
    pub current_usage: usize,
    pub peak_usage: usize,
    pub failed_allocations: usize,
    pub average_allocation_size: f64,
    pub fragmentation_ratio: f64,
}

// Conditionally compile C FFI declarations only when c_hotspots feature is enabled
#[cfg(feature = "c_hotspots")]
extern "C" {
    // SIMD-accelerated memory operations
    fn memcpy_simd(dest: *mut std::ffi::c_void, src: *const std::ffi::c_void, size: usize);
    fn memset_simd(dest: *mut std::ffi::c_void, value: i32, size: usize);
    fn memmove_simd(dest: *mut std::ffi::c_void, src: *const std::ffi::c_void, size: usize);
    fn memcmp_fast(ptr1: *const std::ffi::c_void, ptr2: *const std::ffi::c_void, size: usize) -> i32;
    
    // Media allocator
    fn create_media_allocator(total_size: usize, alignment: usize) -> *mut MediaAllocator;
    fn media_alloc(allocator: *mut MediaAllocator, size: usize) -> *mut std::ffi::c_void;
    fn media_alloc_aligned(allocator: *mut MediaAllocator, size: usize, alignment: usize) -> *mut std::ffi::c_void;
    fn media_free(allocator: *mut MediaAllocator, ptr: *mut std::ffi::c_void);
    fn reset_media_allocator(allocator: *mut MediaAllocator);
    fn destroy_media_allocator(allocator: *mut MediaAllocator);
    
    // Memory pool
    fn create_memory_pool(block_size: usize, initial_block_count: usize) -> *mut MemoryPool;
    fn pool_alloc(pool: *mut MemoryPool) -> *mut std::ffi::c_void;
    fn pool_free(pool: *mut MemoryPool, ptr: *mut std::ffi::c_void);
    fn pool_reset(pool: *mut MemoryPool);
    fn destroy_memory_pool(pool: *mut MemoryPool);
    
    // Zero-copy buffer
    fn create_zero_copy_buffer(capacity: usize) -> *mut ZeroCopyBuffer;
    fn zcb_get_write_ptr(buffer: *mut ZeroCopyBuffer, size: usize) -> *mut std::ffi::c_void;
    fn zcb_commit_write(buffer: *mut ZeroCopyBuffer, size: usize);
    fn zcb_get_read_ptr(buffer: *mut ZeroCopyBuffer, size: *mut usize) -> *const std::ffi::c_void;
    fn zcb_consume_read(buffer: *mut ZeroCopyBuffer, size: usize);
    fn zcb_reset(buffer: *mut ZeroCopyBuffer);
    fn destroy_zero_copy_buffer(buffer: *mut ZeroCopyBuffer);
    
    // Memory statistics
    fn get_memory_stats(allocator: *mut MediaAllocator) -> MemoryStats;
    fn get_pool_stats(pool: *mut MemoryPool) -> MemoryStats;
    
    // Cache-aware operations
    fn prefetch_memory(ptr: *const std::ffi::c_void, size: usize);
    fn flush_cache(ptr: *const std::ffi::c_void, size: usize);
    fn get_cache_line_size() -> usize;
    
    // Pattern operations
    fn fill_pattern_u32(dest: *mut u32, pattern: u32, count: usize);
    fn fill_pattern_u64(dest: *mut u64, pattern: u64, count: usize);
    fn find_pattern(haystack: *const u8, haystack_size: usize, needle: *const u8, needle_size: usize) -> *const u8;
    
    // Buffer validation
    fn validate_buffer_bounds(ptr: *const std::ffi::c_void, size: usize, buffer_start: *const std::ffi::c_void, buffer_size: usize) -> bool;
    fn detect_buffer_overflow(ptr: *const std::ffi::c_void, size: usize) -> bool;
}

/// Safe wrapper for SIMD memcpy
pub fn memcpy_simd_safe(dest: &mut [u8], src: &[u8]) -> bool {
    if dest.len() < src.len() {
        return false;
    }
    
    #[cfg(feature = "c_hotspots")]
    unsafe {
        memcpy_simd(
            dest.as_mut_ptr() as *mut std::ffi::c_void,
            src.as_ptr() as *const std::ffi::c_void,
            src.len(),
        );
    }
    
    #[cfg(not(feature = "c_hotspots"))]
    {
        // Rust fallback implementation
        dest[..src.len()].copy_from_slice(src);
    }
    
    true
}

/// Safe wrapper for SIMD memset
pub fn memset_simd_safe(dest: &mut [u8], value: u8) {
    #[cfg(feature = "c_hotspots")]
    unsafe {
        memset_simd(
            dest.as_mut_ptr() as *mut std::ffi::c_void,
            value as i32,
            dest.len(),
        );
    }
    
    #[cfg(not(feature = "c_hotspots"))]
    {
        // Rust fallback implementation
        dest.fill(value);
    }
}

/// Safe wrapper for fast memcmp
pub fn memcmp_fast_safe(a: &[u8], b: &[u8]) -> Option<std::cmp::Ordering> {
    if a.len() != b.len() {
        return None;
    }
    
    #[cfg(feature = "c_hotspots")]
    {
        let result = unsafe {
            memcmp_fast(
                a.as_ptr() as *const std::ffi::c_void,
                b.as_ptr() as *const std::ffi::c_void,
                a.len(),
            )
        };
        Some(result.cmp(&0))
    }
    
    #[cfg(not(feature = "c_hotspots"))]
    {
        // Rust fallback implementation
        Some(a.cmp(b))
    }
}

/// RAII wrapper for MediaAllocator
pub struct MediaAllocatorWrapper {
    inner: *mut MediaAllocator,
}

impl MediaAllocatorWrapper {
    pub fn new(total_size: usize, alignment: usize) -> Option<Self> {
        #[cfg(feature = "c_hotspots")]
        {
            let inner = unsafe { create_media_allocator(total_size, alignment) };
            if inner.is_null() {
                None
            } else {
                Some(Self { inner })
            }
        }
        
        #[cfg(not(feature = "c_hotspots"))]
        {
            // Rust stub implementation - just create a placeholder
            let _ = (total_size, alignment); // Use parameters to avoid warnings
            Some(Self { inner: std::ptr::null_mut() })
        }
    }
    
    pub fn alloc(&mut self, size: usize) -> Option<*mut u8> {
        #[cfg(feature = "c_hotspots")]
        {
            let ptr = unsafe { media_alloc(self.inner, size) };
            if ptr.is_null() {
                None
            } else {
                Some(ptr as *mut u8)
            }
        }
        
        #[cfg(not(feature = "c_hotspots"))]
        {
            // Rust stub implementation - use standard allocation
            let layout = std::alloc::Layout::from_size_align(size, std::mem::align_of::<u8>()).ok()?;
            let ptr = unsafe { std::alloc::alloc(layout) };
            if ptr.is_null() {
                None
            } else {
                Some(ptr)
            }
        }
    }
    
    pub fn free(&mut self, ptr: *mut u8) {
        #[cfg(feature = "c_hotspots")]
        unsafe {
            media_free(self.inner, ptr as *mut std::ffi::c_void);
        }
        
        #[cfg(not(feature = "c_hotspots"))]
        unsafe {
            // For the stub implementation, we can't properly free without knowing the layout
            // In a real implementation, you'd need to track allocations
            if !ptr.is_null() {
                std::alloc::dealloc(ptr, std::alloc::Layout::from_size_align_unchecked(1, 1));
            }
        }
    }
}

impl Drop for MediaAllocatorWrapper {
    fn drop(&mut self) {
        if !self.inner.is_null() {
            #[cfg(feature = "c_hotspots")]
            unsafe {
                destroy_media_allocator(self.inner);
            }
        }
    }
}

unsafe impl Send for MediaAllocatorWrapper {}
unsafe impl Sync for MediaAllocatorWrapper {}

/// RAII wrapper for MemoryPool
pub struct MemoryPoolWrapper {
    inner: *mut MemoryPool,
}

impl MemoryPoolWrapper {
    pub fn new(block_size: usize, initial_block_count: usize) -> Option<Self> {
        #[cfg(feature = "c_hotspots")]
        {
            let inner = unsafe { create_memory_pool(block_size, initial_block_count) };
            if inner.is_null() {
                None
            } else {
                Some(Self { inner })
            }
        }
        
        #[cfg(not(feature = "c_hotspots"))]
        {
            // Rust stub implementation
            let _ = (block_size, initial_block_count); // Use parameters to avoid warnings
            Some(Self { inner: std::ptr::null_mut() })
        }
    }
    
    pub fn alloc(&mut self) -> Option<*mut u8> {
        #[cfg(feature = "c_hotspots")]
        {
            let ptr = unsafe { pool_alloc(self.inner) };
            if ptr.is_null() {
                None
            } else {
                Some(ptr as *mut u8)
            }
        }
        
        #[cfg(not(feature = "c_hotspots"))]
        {
            // Rust stub implementation
            None
        }
    }
    
    pub fn free(&mut self, ptr: *mut u8) {
        #[cfg(feature = "c_hotspots")]
        unsafe {
            pool_free(self.inner, ptr as *mut std::ffi::c_void);
        }
        
        #[cfg(not(feature = "c_hotspots"))]
        {
            // Rust stub implementation - no-op
            let _ = ptr; // Use parameter to avoid warning
        }
    }
}

impl Drop for MemoryPoolWrapper {
    fn drop(&mut self) {
        if !self.inner.is_null() {
            #[cfg(feature = "c_hotspots")]
            unsafe {
                destroy_memory_pool(self.inner);
            }
        }
    }
}

unsafe impl Send for MemoryPoolWrapper {}
unsafe impl Sync for MemoryPoolWrapper {}

/// RAII wrapper for ZeroCopyBuffer
pub struct ZeroCopyBufferWrapper {
    inner: *mut ZeroCopyBuffer,
}

impl ZeroCopyBufferWrapper {
    pub fn new(capacity: usize) -> Option<Self> {
        #[cfg(feature = "c_hotspots")]
        {
            let inner = unsafe { create_zero_copy_buffer(capacity) };
            if inner.is_null() {
                None
            } else {
                Some(Self { inner })
            }
        }
        
        #[cfg(not(feature = "c_hotspots"))]
        {
            // Rust stub implementation
            let _ = capacity; // Use parameter to avoid warning
            Some(Self { inner: std::ptr::null_mut() })
        }
    }
}

impl Drop for ZeroCopyBufferWrapper {
    fn drop(&mut self) {
        if !self.inner.is_null() {
            #[cfg(feature = "c_hotspots")]
            unsafe {
                destroy_zero_copy_buffer(self.inner);
            }
        }
    }
}

unsafe impl Send for ZeroCopyBufferWrapper {}
unsafe impl Sync for ZeroCopyBufferWrapper {}

/// Safe wrappers for cache operations
pub fn prefetch_memory(ptr: *const u8, size: usize) {
    #[cfg(feature = "c_hotspots")]
    unsafe {
        prefetch_memory(ptr as *const std::ffi::c_void, size);
    }
    
    #[cfg(not(feature = "c_hotspots"))]
    {
        // Rust stub implementation - no-op
        let _ = (ptr, size); // Use parameters to avoid warnings
    }
}

pub fn flush_cache(ptr: *const u8, size: usize) {
    #[cfg(feature = "c_hotspots")]
    unsafe {
        flush_cache(ptr as *const std::ffi::c_void, size);
    }
    
    #[cfg(not(feature = "c_hotspots"))]
    {
        // Rust stub implementation - no-op
        let _ = (ptr, size); // Use parameters to avoid warnings
    }
}

pub fn get_cache_line_size_safe() -> usize {
    #[cfg(feature = "c_hotspots")]
    unsafe {
        get_cache_line_size()
    }
    
    #[cfg(not(feature = "c_hotspots"))]
    {
        // Rust stub implementation - return common cache line size
        64
    }
}

/// Safe wrappers for pattern operations
pub fn fill_pattern_u32_safe(dest: &mut [u32], pattern: u32) {
    #[cfg(feature = "c_hotspots")]
    unsafe {
        fill_pattern_u32(dest.as_mut_ptr(), pattern, dest.len());
    }
    
    #[cfg(not(feature = "c_hotspots"))]
    {
        // Rust fallback implementation
        dest.fill(pattern);
    }
}

pub fn fill_pattern_u64_safe(dest: &mut [u64], pattern: u64) {
    #[cfg(feature = "c_hotspots")]
    unsafe {
        fill_pattern_u64(dest.as_mut_ptr(), pattern, dest.len());
    }
    
    #[cfg(not(feature = "c_hotspots"))]
    {
        // Rust fallback implementation
        dest.fill(pattern);
    }
}

pub fn find_pattern_safe(haystack: &[u8], needle: &[u8]) -> Option<usize> {
    #[cfg(feature = "c_hotspots")]
    {
        let result = unsafe {
            find_pattern(
                haystack.as_ptr(),
                haystack.len(),
                needle.as_ptr(),
                needle.len(),
            )
        };
        
        if result.is_null() {
            None
        } else {
            Some(result as usize - haystack.as_ptr() as usize)
        }
    }
    
    #[cfg(not(feature = "c_hotspots"))]
    {
        // Rust fallback implementation
        haystack.windows(needle.len()).position(|window| window == needle)
    }
}

/// Safe wrappers for buffer validation
pub fn validate_buffer_bounds_safe(
    ptr: *const u8,
    size: usize,
    buffer_start: *const u8,
    buffer_size: usize,
) -> bool {
    #[cfg(feature = "c_hotspots")]
    unsafe {
        validate_buffer_bounds(
            ptr as *const std::ffi::c_void,
            size,
            buffer_start as *const std::ffi::c_void,
            buffer_size,
        )
    }
    
    #[cfg(not(feature = "c_hotspots"))]
    {
        // Rust fallback implementation
        let ptr_addr = ptr as usize;
        let buffer_start_addr = buffer_start as usize;
        
        ptr_addr >= buffer_start_addr
            && ptr_addr + size <= buffer_start_addr + buffer_size
    }
}

pub fn detect_buffer_overflow_safe(ptr: *const u8, size: usize) -> bool {
    #[cfg(feature = "c_hotspots")]
    unsafe {
        detect_buffer_overflow(ptr as *const std::ffi::c_void, size)
    }
    
    #[cfg(not(feature = "c_hotspots"))]
    {
        // Rust stub implementation - always return false (no overflow detected)
        let _ = (ptr, size); // Use parameters to avoid warnings
        false
    }
}

#[cfg(test)]
mod tests {
    use super::*;
    
    #[test]
    fn test_memcpy_safe() {
        let src = vec![1, 2, 3, 4, 5];
        let mut dest = vec![0; 5];
        
        assert!(memcpy_simd_safe(&mut dest, &src));
        assert_eq!(dest, src);
    }
    
    #[test]
    fn test_memset_safe() {
        let mut buffer = vec![0; 10];
        memset_simd_safe(&mut buffer, 42);
        
        assert!(buffer.iter().all(|&x| x == 42));
    }
    
    #[test]
    fn test_memcmp_safe() {
        let a = vec![1, 2, 3];
        let b = vec![1, 2, 3];
        let c = vec![1, 2, 4];
        
        assert_eq!(memcmp_fast_safe(&a, &b), Some(std::cmp::Ordering::Equal));
        assert_eq!(memcmp_fast_safe(&a, &c), Some(std::cmp::Ordering::Less));
    }
    
    #[test]
    fn test_find_pattern() {
        let haystack = b"hello world hello";
        let needle = b"world";
        
        let result = find_pattern_safe(haystack, needle);
        assert_eq!(result, Some(6));
    }
}
